--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <button class="tab-btn" onclick="openTab('dummies')">
         <span class="icon">🛠</span>For the Dummies
     </button>
+    <button class="tab-btn" onclick="openTab('about')">
+    <span class="icon">👥</span>About Us
+</button>
 </nav>
 
 <main>
@@ -197,6 +200,99 @@
         </div>
 
     </div>
+    <div id="about" class="tab-content">
+    <div class="ppt-controls">
+        <button onclick="changeSlide(-1)" class="calc-btn">❮ Prev</button>
+        <span id="slide-number">1 / 6</span>
+        <button onclick="changeSlide(1)" class="calc-btn">Next ❯</button>
+    </div>
+
+    <div class="ppt-container">
+        <div class="member-slide active">
+            <div class="member-card jam-card">
+                <div class="member-emoji">👾☕</div> 
+                <h3>Jam</h3>
+                <span class="member-real-name">(Jameiah Martizano)</span>
+                <p class="member-title">The Purple Powerhouse</p>
+                <ul class="member-details">
+                    <li><strong>Group Stat:</strong> 99% Coffee & Tasks</li>
+                    <li><strong>The Formula:</strong> (Tasks × Coffee) + Purple Energy</li>
+                </ul>
+                <p class="member-quote">"If there's no coffee, is it even a task?"</p>
+            </div>
+        </div>
+
+        <div class="member-slide">
+            <div class="member-card gecka-card">
+                <div class="member-emoji">🍟🌙</div> 
+                <h3>Gecka</h3>
+                <span class="member-real-name">(Angelicka Manaois)</span>
+                <p class="member-title">Trending Mcdo Employee</p>
+                <ul class="member-details">
+                    <li><strong>Group Stat:</strong> ∞% Best Mom / 100% Kind</li>
+                    <li><strong>The Formula:</strong> (McDo Fries + Support) - Stress</li>
+                </ul>
+                <p class="member-quote">"Ahhhhh yellowwww!"</p>
+            </div>
+        </div>
+
+        <div class="member-slide">
+            <div class="member-card smile-card">
+                <div class="member-emoji">🎸❤️</div> 
+                <h3>Smile</h3>
+                <span class="member-real-name">(Smiley David)</span>
+                <p class="member-title">Lover Boy</p>
+                <ul class="member-details">
+                    <li><strong>Group Stat:</strong> 1000% Best Cook / 100% Reliable</li>
+                    <li><strong>The Formula:</strong> (Reliability + Love) × Joshua Garcia Vibe</li>
+                </ul>
+                <p class="member-quote">"I'm basically the Joshua Garcia of this group."</p>
+            </div>
+        </div>
+
+        <div class="member-slide">
+            <div class="member-card drew-card">
+                <div class="member-emoji">🧟‍♂️⏳</div> 
+                <h3>Drew</h3>
+                <span class="member-real-name">(Andrew Cabangon)</span>
+                <p class="member-title">The Fake Contributions EXPERT</p>
+                <ul class="member-details">
+                    <li><strong>Group Stat:</strong> 100% Cramming / 0% Sleep</li>
+                    <li><strong>The Formula:</strong> (Cramming + Chaos) ÷ Deadline</li>
+                </ul>
+                <p class="member-quote">"Wait... when is the deadline?"</p>
+            </div>
+        </div>
+
+        <div class="member-slide">
+            <div class="member-card jade-card">
+                <div class="member-emoji">👺🗡️</div> 
+                <h3>Jade</h3>
+                <span class="member-real-name">(Jade Kester M. Paray)</span>
+                <p class="member-title">The Monster Leader</p>
+                <ul class="member-details">
+                    <li><strong>Group Stat:</strong> 70% Water / 30% Fake Announcements</li>
+                    <li><strong>The Formula:</strong> (Monster + Sung Jin-Woo) ÷ Leader</li>
+                </ul>
+                <p class="member-quote">"Guys tomorrow I will collect 50 pesos, payment for my stress."</p>
+            </div>
+        </div>
+
+        <div class="member-slide">
+            <div class="member-card felix-card">
+                <div class="member-emoji">👓🥋</div> 
+                <h3>Felix</h3>
+                <span class="member-real-name">(Christhian Tibug)</span>
+                <p class="member-title">Four Eyed Athlete</p>
+                <ul class="member-details">
+                    <li><strong>Group Stat:</strong> 100% Punctual / 100% Calm</li>
+                    <li><strong>The Formula:</strong> (Coolness + Kick) + Flash Photography</li>
+                </ul>
+                <p class="member-quote">"Where are you na guys? I'm here at the canteen na."</p>
+            </div>
+        </div>
+    </div>
+</div>
 </main>
 
 <footer id="footer" class="hidden-footer">
@@ -265,4 +361,5 @@ window.onload = () => openTab('home');
 </script>
 
 </body>
+
 </html>
