--- a/index.html
+++ b/index.html
@@ -201,14 +201,10 @@
 
     </div>
     <div id="about" class="tab-content">
-    <div class="ppt-controls">
-        <button onclick="changeSlide(-1)" class="calc-btn">❮ Prev</button>
-        <span id="slide-number">1 / 6</span>
-        <button onclick="changeSlide(1)" class="calc-btn">Next ❯</button>
-    </div>
+    <h2 style="text-align: center;">👥 Meet Group 1</h2>
+    <p style="text-align: center;">The brains (and the chaos) behind this project.</p>
 
-    <div class="ppt-container">
-    <div class="member-slide active">
+    <div class="team-scroll-list">
         <div class="member-card jam-card">
             <div class="member-emoji">👾☕</div> 
             <h3>Jam</h3>
@@ -220,11 +216,9 @@
             </ul>
             <p class="member-quote">"If there's no coffee, is it even a task?"</p>
         </div>
-    </div>
 
-    <div class="member-slide">
         <div class="member-card gecka-card">
-            <div class="member-emoji"> Fries Fries🌙</div> 
+            <div class="member-emoji">🍟🌙</div> 
             <h3>Gecka</h3>
             <span class="member-real-name">(Angelicka Manaois)</span>
             <p class="member-title">Trending Mcdo Employee</p>
@@ -234,9 +228,7 @@
             </ul>
             <p class="member-quote">"Ahhhhh yellowwww!"</p>
         </div>
-    </div>
 
-    <div class="member-slide">
         <div class="member-card smile-card">
             <div class="member-emoji">🎸❤️</div> 
             <h3>Smile</h3>
@@ -248,9 +240,7 @@
             </ul>
             <p class="member-quote">"I'm basically the Joshua Garcia of this group."</p>
         </div>
-    </div>
 
-    <div class="member-slide">
         <div class="member-card drew-card">
             <div class="member-emoji">🧟‍♂️⏳</div> 
             <h3>Drew</h3>
@@ -262,9 +252,7 @@
             </ul>
             <p class="member-quote">"Wait... when is the deadline?"</p>
         </div>
-    </div>
 
-    <div class="member-slide">
         <div class="member-card jade-card">
             <div class="member-emoji">👺🗡️</div> 
             <h3>Jade</h3>
@@ -276,9 +264,7 @@
             </ul>
             <p class="member-quote">"Guys tomorrow I will collect 50 pesos, payment for my stress."</p>
         </div>
-    </div>
 
-    <div class="member-slide">
         <div class="member-card felix-card">
             <div class="member-emoji">👓🥋</div> 
             <h3>Felix</h3>
@@ -362,4 +348,5 @@ window.onload = () => openTab('home');
 </body>
 
 </html>
+
 
