--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <p><em>Best for: Reducing bias and making general claims about a population.</em></p>
             <ul class="comic-list">
                 <li><strong>Simple Random Sampling:</strong> Every individual has an equal chance of being picked (e.g., picking names from a hat).</li>
-                <li><strong>Systematic Sampling:</strong> Selecting every $n^{th}$ individual from a list (e.g., every 10th person).</li>
+                <li><strong>Systematic Sampling:</strong> Selecting every n<sup>th</sup> individual from a list (e.g., every 10th person).</li>
                 <li><strong>Stratified Sampling:</strong> Dividing the population into groups (strata) and picking a random sample from each group to ensure balance.</li>
                 <li><strong>Cluster Sampling:</strong> Dividing the population into groups (clusters), randomly picking a few clusters, and studying everyone inside them.</li>
             </ul>
@@ -211,10 +211,10 @@
             <span class="member-real-name">(Jameiah Martizano)</span>
             <p class="member-title">The Purple Powerhouse</p>
             <ul class="member-details">
-                <li><strong>Group Stat:</strong> 99% Coffee & Tasks</li>
+                <li><strong>Group Stat:</strong> 60% Coffee & Tasks/40% Random Jokes</li>
                 <li><strong>The Formula:</strong> (Tasks × Coffee) + Purple Energy</li>
             </ul>
-            <p class="member-quote">"If there's no coffee, is it even a task?"</p>
+            <p class="member-quote">"Anong tawag sa Paring may kaso?.......... Edi Priest-oner"</p>
         </div>
 
         <div class="member-card gecka-card">
@@ -223,7 +223,7 @@
             <span class="member-real-name">(Angelicka Manaois)</span>
             <p class="member-title">Trending Mcdo Employee</p>
             <ul class="member-details">
-                <li><strong>Group Stat:</strong> ∞% Best Mom / 100% Kind</li>
+                <li><strong>Group Stat:</strong> ♾️% Best Mom / 100% Workaholic</li>
                 <li><strong>The Formula:</strong> (McDo Fries + Support) - Stress</li>
             </ul>
             <p class="member-quote">"Ahhhhh yellowwww!"</p>
@@ -238,19 +238,19 @@
                 <li><strong>Group Stat:</strong> 1000% Best Cook / 100% Reliable</li>
                 <li><strong>The Formula:</strong> (Reliability + Love) × Joshua Garcia Vibe</li>
             </ul>
-            <p class="member-quote">"I'm basically the Joshua Garcia of this group."</p>
+            <p class="member-quote">"Napicturan lang ako nagviral pa talaga"</p>
         </div>
 
         <div class="member-card drew-card">
             <div class="member-emoji">🧟‍♂️⏳</div> 
             <h3>Drew</h3>
             <span class="member-real-name">(Andrew Cabangon)</span>
-            <p class="member-title">The Fake Contributions EXPERT</p>
+            <p class="member-title">The Fake Contributions Expert</p>
             <ul class="member-details">
                 <li><strong>Group Stat:</strong> 100% Cramming / 0% Sleep</li>
                 <li><strong>The Formula:</strong> (Cramming + Chaos) ÷ Deadline</li>
             </ul>
-            <p class="member-quote">"Wait... when is the deadline?"</p>
+            <p class="member-quote">"Gawa ka nga Ambagan"</p>
         </div>
 
         <div class="member-card jade-card">
@@ -274,7 +274,7 @@
                 <li><strong>Group Stat:</strong> 100% Punctual / 100% Calm</li>
                 <li><strong>The Formula:</strong> (Coolness + Kick) + Flash Photography</li>
             </ul>
-            <p class="member-quote">"Where are you na guys? I'm here at the canteen na."</p>
+            <p class="member-quote">"Canteen na ko guys, san na kayo? "</p>
         </div>
     </div>
 </div>
@@ -348,5 +348,6 @@ window.onload = () => openTab('home');
 </body>
 
 </html>
+
 
 
