--- a/index.html
+++ b/index.html
@@ -40,19 +40,22 @@
 </nav>
 
 <main>
-    <div id="home" class="tab-content active">
-        <div class="welcome-card">
-            <h2>Welcome Researchers! </h2>
-            <p>Ever felt like <strong>Statistics</strong> was a language invented just to make you feel like a "dummy"? You aren't alone.</p>
-            <div class="calculator" style="background-color: #fff176;">
-                <p><strong>The Mission:</strong> We’ve broken down the scary stuff—Populations, Sampling techniques, and those math formulas with weird names—into bits so simple even your goldfish could pass the exam.</p>
-            </div>
-            <p>Click the tabs above to stop guessing and start calculating like a pro. Warning: Side effects may include actually understanding your research paper. 🚀</p>
-            <button class="calc-btn" onclick="openTab('dummies')">
-                See the "For the Dummies" Summary →
-            </button>
-        </div>
+   <div id="home" class="tab-content active">
+    <h2>Welcome Researchers! 🚀</h2>
+    <p>Ever felt like <strong>Statistics</strong> was a language invented just to make you feel like a "dummy"? You aren't alone.</p>
+    
+    <div class="calculator" style="text-align: center; background-color: #ffeb3b; border: 4px solid #000; margin-top: 20px;">
+        <h3>🎬 New to Population & Sampling?</h3>
+        <p>Watch this "Dummy-proof" explanation before you start!</p>
+        <a href="https://www.youtube.com/watch?v=r0USDfsKk2E" target="_blank" class="calc-btn" style="text-decoration: none; display: inline-block; background-color: #ff0000; color: white;">
+            ▶ WATCH VIDEO ON YOUTUBE
+        </a>
     </div>
+
+    <div class="calculator" style="margin-top: 20px;">
+        <p><strong>The Mission:</strong> We’ve broken down populations, sampling, and scary formulas into bits so simple even your goldfish could pass.</p>
+    </div>
+</div>
 
     <div id="population" class="tab-content">
         <h2>Population</h2>
@@ -348,6 +351,7 @@ window.onload = () => openTab('home');
 </body>
 
 </html>
+
 
 
 
