--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 
     <div id="slovin" class="tab-content">
         <h2>Slovin Calculator 🧮</h2>
+        <div id="slovinFormulaBox" class="formula-highlight" style="display:none;">n = N / (1 + Ne²)</div>
         <div class="calculator">
             <div class="input-group">
                 <label>Population (N):</label>
@@ -322,10 +323,22 @@ function calculateSlovin() {
     document.getElementById("slovinSteps").innerText = `Step: ${N} / (1 + ${N} * ${e}²) = ${n}`;
 }
 
-function fillSlovinExample() { 
-    document.getElementById("popN").value=500; 
-    document.getElementById("popE").value=0.05; 
-    calculateSlovin(); 
+function calculateSlovin() {
+    const N = parseFloat(document.getElementById("popN").value);
+    const e = parseFloat(document.getElementById("popE").value);
+    
+    if (!N || !e) { 
+        alert("Please enter population and margin of error!"); 
+        return; 
+    }
+
+    // THIS IS THE NEW LINE FOR STEP 2:
+    document.getElementById("slovinFormulaBox").style.display = "block";
+
+    const n = Math.round(N / (1 + N * e * e));
+    document.getElementById("slovinResult").innerText = `✅ Sample Size: ${n}`;
+    document.getElementById("slovinSteps").innerText = `Step: ${N} / (1 + ${N} * ${e}²) = ${n}`;
+} 
 }
 
 function calculateRaosoft() {
@@ -351,6 +364,7 @@ window.onload = () => openTab('home');
 </body>
 
 </html>
+
 
 
 
