--- a/index.html
+++ b/index.html
@@ -348,10 +348,12 @@ function fillRaosoftExample() {
 
 window.onload = () => openTab('home');
 </script>
+    <script src="script.js"></script>
 
 </body>
 
 </html>
+
 
 
 
